--- a/src/app/features/login-page/login-page.component.html
+++ b/src/app/features/login-page/login-page.component.html
@@ -1,10 +1,11 @@
-<div class="flex items-center justify-center h-screen bg-gray-200">
+<div class="flex items-center justify-center h-screen">
   <div class="w-full max-w-md p-8 bg-white rounded-lg shadow-md">
     <h2 class="mb-4 text-2xl font-bold text-center">Login</h2>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="mb-4">
-        <label class="block mb-2 text-sm font-bold text-gray-700" for="email">Email</label>
+        <label class="block mb-2 text-sm font-bold text-gray-700" for="email">Email address</label>
         <input
+          placeholder="email"
           type="email"
           formControlName="email"
           class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none focus:shadow-outline"
@@ -17,6 +18,7 @@
       <div class="mb-6">
         <label class="block mb-2 text-sm font-bold text-gray-700" for="password">Password</label>
         <input
+          placeholder="password"
           type="password"
           formControlName="password"
           class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none focus:shadow-outline"
