--- a/src/app/features/quiz/quiz.component.html
+++ b/src/app/features/quiz/quiz.component.html
@@ -17,6 +17,10 @@
       <ul class="list-disc list-inside mb-2">
         <li *ngFor="let variant of quiz.variants" [ngClass]="{'font-bold': variant.correct, 'text-green-500': variant.correct}">{{ variant.letter }}: {{ variant.variant }}</li>
       </ul>
+      <div class="mt-2 flex justify-end space-x-2">
+        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" (click)="editQuiz(quiz)">Edit</button>
+        <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Delete</button>
+      </div>
     </div>
   </div>
 
@@ -24,5 +28,4 @@
     No quizzes available.
   </div>
 </div>
-
-<srp-modal-quiz *ngIf="isModalOpen" (closeModal)="closeModal()"></srp-modal-quiz>
+<srp-modal-quiz *ngIf="isModalOpen" (closeModal)="closeModal()" [updateModeData]="quizToEdit"></srp-modal-quiz>
