--- a/src/app/features/quiz/quiz.component.html
+++ b/src/app/features/quiz/quiz.component.html
@@ -1,3 +1,4 @@
+<!-- quiz.component.html -->
 <div class="container mx-auto w-full my-10 p-8 bg-white rounded-lg shadow-md">
   <p class="mb-3 text-2xl font-semibold">Category filter</p>
   <select class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none focus:shadow-outline" (change)="onCategoryChange($event)">
@@ -19,7 +20,7 @@
       </ul>
       <div class="mt-2 flex justify-end space-x-2">
         <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" (click)="editQuiz(quiz)">Edit</button>
-        <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded">Delete</button>
+        <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded" (click)="confirmDelete(quiz.id)">Delete</button>
       </div>
     </div>
   </div>
@@ -28,4 +29,13 @@
     No quizzes available.
   </div>
 </div>
+
+<srp-warning-component 
+  *ngIf="showWarning" 
+  [isVisible]="showWarning"
+  (onConfirm)="handleDeleteConfirmation()"
+  (onCancel)="handleDeleteCancellation()">
+  {{ warningMessage }}
+</srp-warning-component>
+
 <srp-modal-quiz *ngIf="isModalOpen" (closeModal)="closeModal()" [updateModeData]="quizToEdit"></srp-modal-quiz>
