--- a/src/app/features/quiz/modal-quiz/modal-quiz.component.html
+++ b/src/app/features/quiz/modal-quiz/modal-quiz.component.html
@@ -1,19 +1,16 @@
 <div class="fixed inset-0 flex items-center justify-center bg-gray-900 bg-opacity-50">
   <div class="bg-white rounded-lg shadow-lg max-w-3xl w-full max-h-screen overflow-auto mt-8 p-6">
-    <h2 class="text-xl font-medium mb-4">{{ updateModeData ? 'Edit Quiz Question' : 'Create New Quiz Question' }}</h2>
-    <form (ngSubmit)="onSubmitQuiz()" #quizForm="ngForm">
+    <h2 class="text-xl font-medium mb-4">{{ updateModeData ? 'Edit Quiz Question' : 'Create new question' }}</h2>
+    <form [formGroup]="quizForm" (ngSubmit)="onSubmitQuiz()">
       <div class="mb-4">
-        <label for="question" class="mb-2 text-sm font-medium">Question Title:</label>
+        <label for="question" class="mb-2 text-sm font-medium">Question :</label>
         <input
           type="text"
           id="question"
-          [(ngModel)]="newQuiz.question"
-          name="question"
+          formControlName="question"
           class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none focus:shadow-outline"
-          required
-          #question="ngModel"
         />
-        <div *ngIf="question.invalid && question.touched" class="text-red-500 text-sm mt-1">
+        <div *ngIf="quizForm.get('question')?.invalid && quizForm.get('question')?.touched" class="text-red-500 text-sm mt-1">
           Question title is required.
         </div>
       </div>
@@ -22,56 +19,47 @@
         <label for="category" class="text-sm mb-2 font-medium">Category:</label>
         <select
           id="category"
-          [(ngModel)]="newQuiz.categoryId"
-          name="category"
+          formControlName="categoryId"
           class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none focus:shadow-outline"
-          required
-          #category="ngModel"
         >
-          <option selected disabled>Select category</option>
+          <option value="" disabled>Select category</option>
           <option *ngFor="let category of categories$ | async" [value]="category.id">
             {{ category.name }}
           </option>
         </select>
-        <div *ngIf="category.invalid && category.touched" class="text-red-500 text-sm mt-1">
+        <div *ngIf="quizForm.get('categoryId')?.invalid && quizForm.get('categoryId')?.touched" class="text-red-500 text-sm mt-1">
           Category is required.
         </div>
       </div>
 
       <div>
         <label class="text-sm font-medium mb-4">Variants</label>
-        <div *ngFor="let variant of newQuiz.variants; let i = index" class="mb-4">
-          <div class="flex items-center mb-2">
-            <label class="text-lg font-medium pr-1">{{ variant.letter }}</label>
-            <input
-              type="text"
-              [(ngModel)]="variant.variant"
-              [ngModelOptions]="{ standalone: true }"
-              name="variant{{ i }}"
-              class="w-full px-3 py-2 text-lg text-gray-700 border rounded-lg focus:outline-none focus:shadow-outline"
-              placeholder="Enter answer"
-              required
-              #variantInput="ngModel"
-            />
-            <input
-              type="checkbox"
-              [(ngModel)]="variant.correct"
-              [ngModelOptions]="{ standalone: true }"
-              class="ml-2 h-6 w-6 text-blue-500 focus:ring-blue-400 border-gray-300 rounded"
-            />
-            <span class="ml-1 text-sm text-gray-600">Correct</span>
-            <button
-              type="button"
-              class="ml-2 text-red-500 hover:text-red-700"
-              (click)="removeVariant(i)"
-            >
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-              </svg>
-            </button>
-          </div>
-          <div *ngIf="variantInput.invalid && variantInput.touched" class="text-red-500 text-sm mt-1">
-            Answer {{ variant.letter }} is required.
+        <div formArrayName="variants">
+          <div *ngFor="let variant of variants.controls; let i = index" [formGroupName]="i" class="mb-4">
+            <div class="flex items-center mb-2">
+              <label class="text-lg font-medium pr-1">{{ variant.get('letter')?.value }}</label>
+              <input
+                type="checkbox"
+                formControlName="correct"
+                class="mx-2 h-6 w-6 text-blue-500 focus:ring-blue-400 border-gray-300 rounded"
+              />
+              <input
+                type="text"
+                formControlName="variant"
+                class="w-full px-3 py-2 text-lg text-gray-700 border rounded-lg focus:outline-none focus:shadow-outline"
+                placeholder="Enter answer"
+              />
+              <button
+                type="button"
+                class="ml-2 text-red-500 hover:text-red-700"
+                (click)="removeVariant(i)"
+              >
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 24 24" fill="rgba(249,6,6,1)"><path d="M17 6H22V8H20V21C20 21.5523 19.5523 22 19 22H5C4.44772 22 4 21.5523 4 21V8H2V6H7V3C7 2.44772 7.44772 2 8 2H16C16.5523 2 17 2.44772 17 3V6ZM18 8H6V20H18V8ZM9 11H11V17H9V11ZM13 11H15V17H13V11ZM9 4V6H15V4H9Z"></path></svg>
+              </button>
+            </div>
+            <div *ngIf="variant.get('variant')?.invalid && variant.get('variant')?.touched" class="text-red-500 text-sm mt-1">
+              Answer {{ variant.get('letter')?.value }} is required.
+            </div>
           </div>
         </div>
       </div>
@@ -81,7 +69,7 @@
         class="bg-blue-500 text-white hover:bg-blue-600 font-medium px-4 py-2 rounded-lg"
         (click)="addVariant()"
       >
-        Add Answer
+        Add variant
       </button>
 
       <div class="flex justify-end space-x-4 mt-4">
