create student , question pages

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -4,6 +4,7 @@
     <div class="space-x-4">
       <a routerLink="/quiz" routerLinkActive="text-gray-300 underline font-semibold" class="text-white text-lg">Quiz</a>
       <a routerLink="/category" routerLinkActive="text-gray-300 underline font-semibold" class="text-white text-lg">Category</a>
+      <a routerLink="/student" routerLinkActive="text-gray-300 underline font-semibold" class="text-white text-lg">Student</a>
     </div>
   </div>
 </div>
