--- a/src/app/features/questions/questions.component.html
+++ b/src/app/features/questions/questions.component.html
@@ -1,10 +1,14 @@
 <div class="container mx-auto w-full my-10 p-8 bg-white rounded-lg shadow-md">
   <div *ngIf="quizzes.length > 0">
-    <h2 class="text-2xl font-bold mb-4">{{ quizzes[currentQuizIndex].question }}</h2>
+    <h2 class="text-2xl font-bold mb-4">
+      {{ quizzes[currentQuizIndex].question }}
+    </h2>
     <div *ngIf="quizzes[currentQuizIndex].multiple">
       <div class="space-y-2">
-        <div *ngFor="let variant of quizzes[currentQuizIndex].variants" 
-             class="flex items-center p-4 border border-gray-300 rounded-lg">
+        <div
+          *ngFor="let variant of quizzes[currentQuizIndex].variants"
+          class="flex items-center p-4 border border-gray-300 rounded-lg"
+        >
           <input
             type="checkbox"
             [checked]="isSelected(variant)"
@@ -12,7 +16,9 @@
             class="h-6 w-6 text-blue-600 mr-4"
             [disabled]="showResult"
           />
-          <span class="text-lg">{{ variant.letter }}. {{ variant.variant }}</span>
+          <span class="text-lg"
+            >{{ variant.letter }}. {{ variant.variant }}</span
+          >
         </div>
       </div>
     </div>
@@ -21,7 +27,7 @@
         <button
           *ngFor="let variant of quizzes[currentQuizIndex].variants"
           (click)="selectAnswer(variant)"
-          [ngClass]="{'bg-blue-500 text-white': isSelected(variant)}"
+          [ngClass]="{ 'bg-blue-500 text-white': isSelected(variant) }"
           class="w-full text-left px-4 py-2 rounded-lg border border-gray-300"
           [disabled]="showResult"
         >
@@ -29,12 +35,25 @@
         </button>
       </div>
     </div>
-    <button
-      (click)="submitOrNext()"
-      class="bg-blue-500 text-white hover:bg-blue-600 font-medium px-4 py-2 rounded-lg mt-4"
-    >
-      {{ showResult ? (isLastQuestion ? 'Finish' : 'Next Question') : 'Submit Answer' }}
-    </button>
+    <div class="flex justify-between">
+      <button
+        (click)="submitOrNext()"
+        class="bg-blue-500 text-white hover:bg-blue-600 font-medium px-4 py-2 rounded-lg mt-4"
+      >
+        {{
+          showResult
+            ? isLastQuestion
+              ? "Finish"
+              : "Next Question"
+            : "Submit Answer"
+        }}
+      </button>
+      <button
+      class="bg-red-500 text-white hover:bg-red-600 font-medium px-4 py-2 rounded-lg mt-4"
+      >
+        Exit
+      </button>
+    </div>
   </div>
   <div *ngIf="quizzes.length === 0">
     <p>Loading...</p>
