--- a/src/app/features/rating/rating.component.html
+++ b/src/app/features/rating/rating.component.html
@@ -1,8 +1,29 @@
 <div class="container mx-auto w-full my-10 p-8 bg-white rounded-lg shadow-md">
   <h2 class="text-2xl font-bold mb-4">Rating</h2>
   <p class="text-lg mb-4">
-    You answered correctly {{ correctAnswers }} from {{ totalQuestions }} questions.
+    You answered <span class="font-semibold text-green-600">{{ correctAnswersCount }}</span> correctly out of <span class="font-semibold text-blue-600">{{ totalQuestions }}</span> questions.
   </p>
 
-  <button routerLink="/student" class="text-left px-4 py-2 rounded-lg border bg-blue-500 text-white border-gray-300">Back to categories</button>
+    <h3 class="text-2xl font-semibold mb-4 border-b pb-2">Completed Questions:</h3>
+    <ul class="list-none pl-0">
+      <li *ngFor="let result of currentCategoryTests" class="mb-4">
+        <div class="p-4 border rounded-lg shadow-sm bg-gray-50">
+          <p class="font-semibold text-lg mb-2">{{ result.quiz.question }}</p>
+          <p class="mb-1"><span class="font-semibold">Selected answers:</span> 
+            <span *ngFor="let answer of result.selectedAnswers" class="inline-block ml-1 px-2 py-1 bg-blue-100 rounded">{{ answer }}</span>
+          </p>
+          <p class="mb-1"><span class="font-semibold">Correct answers:</span> 
+            <span *ngFor="let answer of result.correctVariants" class="inline-block ml-1 px-2 py-1 bg-green-100 rounded">{{ answer }}</span>
+          </p>
+          <p class="font-semibold">
+            Correct: 
+            <span [ngClass]="result.isCorrect ? 'text-green-600' : 'text-red-600'">{{ result.isCorrect ? 'Yes' : 'No' }}</span>
+          </p>
+        </div>
+      </li>
+    </ul>
+  
+    <button (click)="clearSessionStorageAndNavigate()" class="text-left px-4 py-2 rounded-lg border bg-blue-500 text-white border-gray-300 hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500">
+      Back to categories
+    </button>
 </div>
