--- a/src/app/features/questions/questions.component.html
+++ b/src/app/features/questions/questions.component.html
@@ -1,5 +1,13 @@
 <div class="container mx-auto w-full my-10 p-8 bg-white rounded-lg shadow-md">
   <div *ngIf="quizzes.length > 0">
+    <div class="flex justify-center gap-2 mb-4">
+      <span
+        *ngFor="let index of quizzes; let i = index"
+        [ngClass]="{'bg-gray-600': i <= currentQuizIndex, 'bg-gray-300': i > currentQuizIndex}"
+        class="w-3 h-3 rounded-full"
+      ></span>
+    </div>
+
     <h2 class="text-2xl font-bold mb-4">
       {{ quizzes[currentQuizIndex].question }}
     </h2>
@@ -16,9 +24,7 @@
             class="h-6 w-6 text-blue-600 mr-4"
             [disabled]="showResult"
           />
-          <span class="text-lg"
-            >{{ variant.letter }}. {{ variant.variant }}</span
-          >
+          <span class="text-lg">{{ variant.letter }}. {{ variant.variant }}</span>
         </div>
       </div>
     </div>
@@ -41,15 +47,13 @@
         class="bg-blue-500 text-white hover:bg-blue-600 font-medium px-4 py-2 rounded-lg mt-4"
       >
         {{
-          showResult
-            ? isLastQuestion
-              ? "Finish"
-              : "Next Question"
-            : "Submit Answer"
+          isLastQuestion
+            ? "Finish"
+            : "Next Question"
         }}
       </button>
       <button
-      class="bg-red-500 text-white hover:bg-red-600 font-medium px-4 py-2 rounded-lg mt-4"
+        class="bg-red-500 text-white hover:bg-red-600 font-medium px-4 py-2 rounded-lg mt-4"
       >
         Exit
       </button>
