update quizzes logic

--- a/src/app/features/quiz/quiz.component.html
+++ b/src/app/features/quiz/quiz.component.html
@@ -18,9 +18,9 @@
       <div *ngFor="let quiz of quizzes" class="bg-white rounded-lg mb-3 shadow-md p-4">
         <h3 class="font-medium text-lg mb-2">{{ quiz.question }}</h3>
         <ul class="list-disc list-inside mb-2">
-          <li *ngFor="let variant of quiz.variants" [ngClass]="{'font-bold': variant.correct, 'text-green-500': variant.correct}">
+          <!-- <li *ngFor="let variant of quiz.variants" [ngClass]="{'font-bold': variant.correct, 'text-green-500': variant.correct}">
             {{ variant.letter }}: {{ variant.variant }}
-          </li>
+          </li> -->
         </ul>
         <div class="mt-2 flex justify-end space-x-2">
           <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" (click)="editQuiz(quiz)">Edit</button>
