--- a/src/app/features/rating/rating.component.html
+++ b/src/app/features/rating/rating.component.html
@@ -1,16 +1,17 @@
 <div class="container mx-auto w-full my-10 p-8 bg-white rounded-lg shadow-md">
   <h2 class="text-2xl font-bold mb-4">Rating</h2>
-  <p class="text-lg mb-4">
-    You answered
-    <span class="font-semibold text-green-600">{{ correctAnswersCount }}</span>
-    correctly out of
-    <span class="font-semibold text-blue-600">{{ totalQuestions }}</span>
-    questions.
-  </p>
 
   <div class="circle-chart mx-auto mb-8">
-    <div class="circle" [ngStyle]="{ background: getConicGradient() }">
-      <span class="score">{{ correctAnswersCount }}</span>
+    <div class="circle">
+      <div class="circle-inner" [ngStyle]="{ background: getConicGradient() }">
+        <div class="circle-center">
+          <span class="text-3xl font-semibold text-white">{{ totalQuestions }}</span>
+        </div>
+        <div class="circle-info relative">
+          <div class="text-2xl font-semibold absolute bottom-1 right-1 text-green-500">{{ correctAnswersCount }}</div>
+          <div class="text-2xl font-semibold absolute top-0 left-1 text-red-500">{{ incorrectAnswersCount }}</div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -53,14 +54,19 @@
           </button>
         </div>
         <div class="mt-4 flex flex-col items-start transitionCard" [ngClass]="{'open': result.showDetails}">
-          <p class="mb-1"><span class="font-semibold">Selected answers:</span>
-            <span *ngFor="let answer of result.selectedAnswers" class="ml-1 px-1 py-1">{{ answer }}</span>
+          <p class="mb-1">
+            <span class="font-semibold">Selected answers:</span>
+            <span *ngFor="let letter of result.selectedAnswers" class="ml-1 px-1 py-1">
+              {{ getVariantText(letter, result.quiz.variants) }}
+            </span>
           </p>
-          <p class="mb-1"><span class="font-semibold">Correct answers:</span>
-            <span *ngFor="let answer of result.correctVariants" class="ml-1 px-1 py-1 ">{{ answer }}</span>
+          <p class="mb-1">
+            <span class="font-semibold">Correct answers:</span>
+            <span *ngFor="let letter of result.correctVariants" class="ml-1 px-1 py-1">
+              {{ getVariantText(letter, result.quiz.variants) }}
+            </span>
           </p>
         </div>
-        
       </div>
     </li>
   </ul>
