--- a/src/app/features/rating/rating.component.scss
+++ b/src/app/features/rating/rating.component.scss
@@ -21,12 +21,41 @@
 }
 
 .circle {
+  position: relative;
   width: 100%;
   height: 100%;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.circle-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: conic-gradient(green 0%, red 0% 100%);
+}
+
+.score {
+  font-size: 36px;
+  font-weight: bold;
+  color: white;
+  position: absolute;
+}
+
+.circle-info {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .score {
