--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,37 +1,37 @@
-<div class="flex items-center justify-center h-screen">
-  <div class="w-full max-w-md p-8 bg-white rounded-lg shadow-md">
-    <h2 class="mb-4 text-2xl font-bold text-center">Login</h2>
+<div class="flex items-center justify-center min-h-screen px-4 sm:px-0 bg-[#F2F2F2]">
+  <div class="w-full max-w-md p-8 bg-[#FFFFFF] rounded-lg shadow-md">
+    <h2 class="mb-4 text-2xl font-bold text-center text-gray-900">Login</h2>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="mb-4">
-        <label class="block mb-2 text-sm font-bold text-gray-700" for="email">Email address</label>
+        <label class="block mb-2 text-sm font-bold text-gray-800" for="email">Email address</label>
         <input
           placeholder="email"
           type="email"
           formControlName="email"
-          class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none focus:shadow-outline"
+          class="w-full px-3 py-2 text-gray-800 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
           [ngClass]="{'border-red-500': loginForm.get('email')?.invalid && loginForm.get('email')?.touched}"
         />
-        <div *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched" class="mt-1 text-sm text-red-500">
+        <div *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched" class="mt-1 text-sm text-red-600">
           Please enter a valid email.
         </div>
       </div>
       <div class="mb-6">
-        <label class="block mb-2 text-sm font-bold text-gray-700" for="password">Password</label>
+        <label class="block mb-2 text-sm font-bold text-gray-800" for="password">Password</label>
         <input
           placeholder="password"
           type="password"
           formControlName="password"
-          class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none focus:shadow-outline"
+          class="w-full px-3 py-2 text-gray-800 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
           [ngClass]="{'border-red-500': loginForm.get('password')?.invalid && loginForm.get('password')?.touched}"
         />
-        <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="mt-1 text-sm text-red-500">
+        <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" class="mt-1 text-sm text-red-600">
           Password must be at least 6 characters.
         </div>
       </div>
       <div class="flex items-center justify-between">
         <button
           type="submit"
-          class="w-full px-4 py-2 font-bold text-white bg-blue-500 rounded-lg hover:bg-blue-700 focus:outline-none focus:shadow-outline"
+          class="w-full px-4 py-2 font-bold bg-gray-800 text-white hover:bg-gray-900 rounded-lg focus:outline-none focus:shadow-outline"
           [disabled]="loginForm.invalid"
         >
           Login
