--- a/src/app/features/quiz/modal-quiz/modal-quiz.component.html
+++ b/src/app/features/quiz/modal-quiz/modal-quiz.component.html
@@ -1,9 +1,9 @@
-<div class="fixed inset-0 flex items-center justify-center bg-gray-900 bg-opacity-50">
-  <div class="bg-white rounded-lg shadow-lg max-w-3xl w-full max-h-screen overflow-auto mt-8 p-6">
-    <h2 class="text-xl font-medium mb-4">{{ updateModeData ? 'Edit Quiz Question' : 'Create new question' }}</h2>
+<div class="fixed inset-0 flex items-center justify-center bg-gray-900 bg-opacity-50 p-4 sm:p-8">
+  <div class="bg-white rounded-lg shadow-lg max-w-lg w-full max-h-screen overflow-auto p-6">
+    <h2 class="text-xl font-medium mb-4 text-center">{{ updateModeData ? 'Edit Quiz Question' : 'Create new question' }}</h2>
     <form [formGroup]="quizForm" (ngSubmit)="onSubmitQuiz()">
       <div class="mb-4">
-        <label for="question" class="mb-2 text-sm font-medium">Question<span class="text-red-500 text-xl">*</span> :</label>
+        <label for="question" class="block mb-2 text-sm font-medium">Question<span class="text-red-500 text-xl">*</span>:</label>
         <input
           type="text"
           id="question"
@@ -16,7 +16,7 @@
       </div>
 
       <div class="mb-4">
-        <label for="category" class="text-sm mb-2 font-medium">Category<span class="text-red-500 text-xl">*</span>:</label>
+        <label for="category" class="block mb-2 text-sm font-medium">Category<span class="text-red-500 text-xl">*</span>:</label>
         <select
           id="category"
           formControlName="categoryId"
@@ -33,7 +33,7 @@
       </div>
 
       <div>
-        <label class="text-sm font-medium mb-4">Variants<span class="text-red-500 text-xl">*</span></label>
+        <label class="block text-sm font-medium mb-4">Variants<span class="text-red-500 text-xl">*</span></label>
         <div formArrayName="variants">
           <div *ngFor="let variant of variants.controls; let i = index" [formGroupName]="i" class="mb-4">
             <div class="flex items-center mb-2">
@@ -66,26 +66,26 @@
 
       <button
         type="button"
-        class="bg-blue-500 text-white hover:bg-blue-600 font-medium px-4 py-2 rounded-lg"
+        class="bg-gray-800 text-white hover:bg-gray-900 font-medium px-4 py-2 rounded-lg w-full mb-4"
         (click)="addVariant()"
       >
         Add variant
       </button>
 
-      <div class="flex justify-end space-x-4 mt-4">
+      <div class="flex flex-col sm:flex-row justify-end space-y-4 sm:space-y-0 sm:space-x-4">
         <button
-          type="button"
-          class="bg-gray-200 text-gray-800 hover:bg-gray-300 font-medium px-4 py-2 rounded-lg"
-          (click)="onCloseModal()"
+        type="submit"
+        class="bg-gray-800 text-white hover:bg-gray-900 font-medium px-4 py-2 rounded-lg w-full sm:w-auto"
         >
-          Cancel
-        </button>
-        <button
-          type="submit"
-          class="bg-blue-500 text-white hover:bg-blue-600 font-medium px-4 py-2 rounded-lg"
-        >
-          {{ updateModeData ? 'Update' : 'Create' }}
-        </button>
+        {{ updateModeData ? 'Update' : 'Create' }}
+      </button>
+      <button
+        type="button"
+        class="bg-gray-200 text-gray-800 hover:bg-gray-300 font-medium px-4 py-2 rounded-lg w-full sm:w-auto"
+        (click)="onCloseModal()"
+      >
+        Cancel
+      </button>
       </div>
     </form>
   </div>
