--- a/src/app/features/rating/rating.component.html
+++ b/src/app/features/rating/rating.component.html
@@ -1,5 +1,5 @@
-<div class="container mx-auto w-full my-10 p-8 bg-white rounded-lg shadow-md">
-  <h2 class="text-2xl font-bold mb-4">Rating</h2>
+<div class="container mx-auto w-full my-10 p-4 sm:p-8 bg-[#F2F2F2] rounded-lg shadow-md">
+  <h2 class="text-2xl font-bold mb-4 text-center text-gray-900">Rating</h2>
 
   <div class="circle-chart mx-auto mb-8">
     <div class="circle">
@@ -15,18 +15,18 @@
     </div>
   </div>
 
-  <h3 class="text-2xl font-semibold mb-4 border-b pb-2">
+  <h3 class="text-2xl font-semibold mb-4 border-b pb-2 text-gray-900">
     Completed Questions:
   </h3>
   <ul class="list-none pl-0">
     <li *ngFor="let result of currentCategoryTests" class="mb-4">
-      <div class="p-4 border rounded-lg shadow-sm bg-gray-50">
+      <div class="p-4 border rounded-lg shadow-sm bg-white">
         <div class="flex justify-between items-center">
           <p
             class="font-semibold text-lg mb-2"
             [ngClass]="{
-              'text-green-600': result.isCorrect,
-              'text-red-600': !result.isCorrect
+              'text-green-700': result.isCorrect,
+              'text-red-700': !result.isCorrect
             }"
           >
             {{ result.quiz.question }}
@@ -54,15 +54,15 @@
           </button>
         </div>
         <div class="mt-4 flex flex-col items-start transitionCard" [ngClass]="{'open': result.showDetails}">
-          <p class="mb-1">
-            <span class="font-semibold">Selected answers:</span>
-            <span *ngFor="let letter of result.selectedAnswers" class="ml-1 px-1 py-1">
+          <p class="mb-2">
+            <span class="font-semibold text-gray-900">Selected answers:</span>
+            <span *ngFor="let letter of result.selectedAnswers" class="ml-1 px-1 py-1 bg-gray-200 rounded">
               {{ getVariantText(letter, result.quiz.variants) }}
             </span>
           </p>
           <p class="mb-1">
-            <span class="font-semibold">Correct answers:</span>
-            <span *ngFor="let letter of result.correctVariants" class="ml-1 px-1 py-1">
+            <span class="font-semibold text-gray-900">Correct answers:</span>
+            <span *ngFor="let letter of result.correctVariants" class="ml-1 px-1 py-1 bg-green-100 rounded">
               {{ getVariantText(letter, result.quiz.variants) }}
             </span>
           </p>
@@ -73,7 +73,7 @@
 
   <button
     (click)="clearSessionStorageAndNavigate()"
-    class="text-left px-4 py-2 rounded-lg border bg-blue-500 text-white border-gray-300 hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
+    class="text-left px-4 py-2 rounded-lg border bg-blue-600 text-white border-gray-300 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500"
   >
     Back to categories
   </button>
