--- a/src/app/features/student/student.component.html
+++ b/src/app/features/student/student.component.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto p-6">
-  <h1 class="text-3xl font-bold mb-6 text-center text-gray-800">Categories of Questions</h1>
+  <h1 class="text-3xl font-bold mb-6 text-center text-gray-900">Categories of Questions</h1>
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
     <div 
       *ngFor="let category of categories" 
@@ -8,15 +8,17 @@
     >
       <div 
         class="absolute inset-0 bg-cover bg-center transition-opacity duration-300 ease-in-out"
-        style="background-image: url('path/to/image.jpg');"
+        [ngStyle]="{'background-image': 'url(' + category.imageUrl + ')'}"
       ></div>
       <div 
-        class="relative rounded-lg p-4 text-white bg-white transition-colors duration-300 ease-in-out hover:bg-blue-400"
+        class="relative p-4 text-white bg-gray-800 bg-opacity-70 transition-colors duration-300 ease-in-out hover:bg-blue-500"
       >
-        <h2 class="text-2xl font-semibold mb-2 transition-colors duration-300 ease-in-out text-black ">
+        <h2 class="text-2xl font-semibold mb-2">
           {{ category.name }}
         </h2>
-        <p class="text-sm transition-colors duration-300 ease-in-out text-black ">Count of questions: {{ category.questionCount || 0 }}</p>
+        <p class="text-sm text-gray-200">
+          Count of questions: {{ category.questionCount || 0 }}
+        </p>
       </div>
     </div>
   </div>
